# Canopy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
canopy/: __init__.py
canopy/config/: loader.py  sample_pipeline.yaml
canopy/core/context/: engine.py  factories.py  parsers.py  prompts.py  schema_inspector.py
canopy/core/ingestion/: base.py  csv_connector.py  json_connector.py
canopy/core/loader/: base.py  postgres.py
canopy/core/script_gen/: generator.py  runner.py  template.py  validator.py
canopy/llm/: base.py  ollama.py
canopy/models/: __init__.py  analysis.py  config.py  execution.py  schema.py
canopy/triggers/: cli.py
examples/: README.md  employees_to_postgres.yaml  sample_employees.csv
tests/: conftest.py  test_cli.py  test_config.py  test_context_engine.py  test_csv_connector.py  test_failure_modes.py  test_json_connector.py  test_ollama_provider.py  test_postgres_loader.py  test_schema_inspector.py  test_script_generator.py  test_script_runner.py
